@@ -2,6 +2,9 @@
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-qt4-r2): Add new
 	eclass qt4-r2
+	* ebuild-mode-keywords-kde-meta
+	* ebuild-mode-keywords-kde-functions: Remove obsolete eclasses for
+	KDE 3
 
 2009-12-13  Christian Faulhammer  <fauli@gentoo.org>
 
